javadeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: javawebapp
  template:
    metadata:
      name: javawebapp
      labels:
        app: javawebapp
    spec:
      containers:
      - name: javaweappcontainer
        image: dockerhandson/java-web-app
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: 256Mi
          limits:
             cpu: "500m"
             memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: javasvc
spec:
  type: ClusterIP
  selector:
    app: javawebapp
  ports:
  - port: 80
    targetPort: 8080
