javappliveprobe.yml
apiVersion: v1
kind: Service
metadata:
  name: javasvc
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
  - port: 80
    targetPort: 8080
