mavenappreadinessprobe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenappdeploymnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mavenapp
  template:
    metadata:
      name: mavenpod
      labels:
        app: mavenapp
    spec:
      containers:
      - name: mavencontainer
        image: dockerhandson/maven-web-application:1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "100m"
            memory: "256Mi" 
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: mavenservice
spec:
  type: NodePort
  selector:
    app: mavenapp
  ports:
  - port: 80
    targetPort: 8080
