ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  ingressClassName: nginx
  rules:
  - host: javapp.awesometechnologyhub.blogspot.com
    http:
      paths:
      - backend:
          serviceName: javasvc
          servicePort: 80
